// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`badge [snapshot] > renders correctly when variant="accent", size="lg", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-accent"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="accent", size="lg", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-accent-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="accent", size="md", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-accent"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="accent", size="md", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-accent-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="accent", size="sm", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-accent"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="accent", size="sm", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-accent-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="contrast", size="lg", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-contrast"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="contrast", size="lg", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-contrast-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="contrast", size="md", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-contrast"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="contrast", size="md", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-contrast-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="contrast", size="sm", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-contrast"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="contrast", size="sm", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-contrast-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="danger", size="lg", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-danger"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="danger", size="lg", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-danger-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="danger", size="md", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-danger"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="danger", size="md", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-danger-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="danger", size="sm", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-danger"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="danger", size="sm", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-danger-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="info", size="lg", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-info"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="info", size="lg", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-info-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="info", size="md", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-info"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="info", size="md", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-info-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="info", size="sm", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-info"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="info", size="sm", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-info-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="mint", size="lg", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-mint"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="mint", size="lg", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-mint-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="mint", size="md", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-mint"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="mint", size="md", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-mint-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="mint", size="sm", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-mint"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="mint", size="sm", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-mint-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="pink", size="lg", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-pink"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="pink", size="lg", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-pink-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="pink", size="md", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-pink"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="pink", size="md", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-pink-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="pink", size="sm", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-pink"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="pink", size="sm", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-pink-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="purple", size="lg", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-purple"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="purple", size="lg", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-purple-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="purple", size="md", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-purple"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="purple", size="md", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-purple-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="purple", size="sm", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-purple"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="purple", size="sm", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-purple-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="success", size="lg", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-success"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="success", size="lg", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-success-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="success", size="md", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-success"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="success", size="md", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-success-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="success", size="sm", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-success"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="success", size="sm", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-success-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="warning", size="lg", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-warning"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="warning", size="lg", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-lg vesper-badge-warning-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-md vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="warning", size="md", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-warning"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="warning", size="md", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-md vesper-badge-warning-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-sm vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="warning", size="sm", subtle={false} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-warning"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;

exports[`badge [snapshot] > renders correctly when variant="warning", size="sm", subtle={true} 1`] = `
<div
  class="vesper-badge vesper-badge-sm vesper-badge-warning-subtle"
>
  <span
    class="vesper-typography vesper-typography-label-xs vesper-badge-text"
  >
    Badge Text
  </span>
</div>
`;
